Prevent body jumping on stick navbar

--- a/app/public/css/index.css
+++ b/app/public/css/index.css
@@ -6,7 +6,7 @@ body {
 	font-family: VT323, Arial;
 }
 
-#pie-sky {
+#pie-title {
 	background-image: url(../img/sky.png);
 	background-size: cover;
 	background-position: left bottom;
@@ -44,7 +44,7 @@ body {
 	width: 100%;
 }
 
-#pie-dungeon {
+#pie-body {
 	background-image: url(../img/brick.png);
 	background-repeat: repeat;
 	height: 300vh; /* temporary */
